@@ -1,7 +1,6 @@
 package com.dfn.lsf.service.impl;
 
 import com.dfn.lsf.model.*;
-import com.dfn.lsf.model.requestMsg.CommonInqueryMessage;
 import com.dfn.lsf.repository.LSFRepository;
 import com.dfn.lsf.service.LsfCoreService;
 import com.dfn.lsf.service.MessageProcessor;
@@ -10,7 +9,6 @@ import com.google.gson.Gson;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
 import java.text.SimpleDateFormat;
@@ -71,7 +69,6 @@ public class ApplicationCollateralProcessor implements MessageProcessor {
     }
 
     private String getPortfolioForCollaterals(Map<String, Object> map) {
-
         String id = map.get("id").toString();
         MApplicationCollaterals collaterals = null;
         Map<String, Symbol> symbolMap = new HashMap<>();
@@ -95,139 +92,177 @@ public class ApplicationCollateralProcessor implements MessageProcessor {
                 /*---set Approved limit---*/
                 collaterals.setApprovedLimitAmount(fromDBApp.getProposedLimit());
 
-                /*---get attached Marginability Group---*/
-                MarginabilityGroup marginabilityGroup = helper.getMarginabilityGroup(fromDBApp.getMarginabilityGroup());
-                List<LiquidityType> attachedLiqGoupList = null;
-                if (marginabilityGroup != null) {
-                    attachedLiqGoupList = marginabilityGroup.getMarginabilityList();
-                }
+//                /*---get attached Marginability Group---*/
+//                MarginabilityGroup marginabilityGroup = helper.getMarginabilityGroup(fromDBApp.getMarginabilityGroup());
+//                List<LiquidityType> attachedLiqGoupList = null;
+//                if (marginabilityGroup != null) {
+//                    attachedLiqGoupList = marginabilityGroup.getMarginabilityList();
+//                }
 
                 String customerId = fromDBApp.getCustomerId();
-                CommonInqueryMessage req = new CommonInqueryMessage();
-                if (GlobalParameters.getInstance().getShariaSymbolsAsCollateral()) { /*--- If only sharia symbols are
-                 allowed for
-                                    collateral---*/
-                    req.setReqType(LsfConstants.GET_PF_SYMBOLS_FOR_COLLETRALS);
-                } else {/*--- If all symbols are allowed for collateral---*/
-                    req.setReqType(LsfConstants.GET_NON_SHARIA_PF_SYMBOLS_FOR_COLLETRALS);
-                }
-                req.setCustomerId(customerId);
-
-                /*---request customer  PF Symbols for Colleterals---*/
-                Object result = helper.sendMessageToOms(gson.toJson(req));
-                Map<String, Object> resultMap = new HashMap<>();
-                resultMap = gson.fromJson((String) result, resultMap.getClass());
-                ArrayList<Map<String, Object>> accList = (ArrayList<Map<String, Object>>) resultMap.get(
-                        "responseObject");
-                for (Map<String, Object> resMap : accList) {
-                    Map<String, Object> mpTRadingAcc = (Map<String, Object>) resMap.get("tradingAccount");
-                    String tradingAccId = mpTRadingAcc.get("accountId").toString();
-                    String exchange = mpTRadingAcc.get("exchange").toString();
-
-                    /*---Display only Application Selected Trading Account as Collateral---*/
-                    if (resMap.containsKey("shariaSymbols")
-                        && (tradingAccId.equalsIgnoreCase(fromDBApp.getTradingAcc()))) {
-                        TradingAcc tradingAcc = collaterals.isTradingAccountExist(tradingAccId);
-                        tradingAcc.setExchange(exchange);
-                        tradingAcc.setApplicationId(id);
-                        tradingAcc.setLsfType(false);
-                        ArrayList<Map<String, Object>> symbolsList = (ArrayList<Map<String, Object>>) resMap.get(
-                                "shariaSymbols");
-
-                        for (Map<String, Object> symbolObj : symbolsList) {
-                            String symbolCode = symbolObj.get("symbolCode").toString();
-                            String sExchange = symbolObj.get("exchange").toString();
-                            Symbol symbol = tradingAcc.isSymbolExist(symbolCode, sExchange);
-                            if (symbolObj.containsKey("shortDescription")) {
-                                symbol.setShortDescription(symbolObj.get("shortDescription").toString());
-                            }
-                            symbol.setPreviousClosed(Double.parseDouble(symbolObj.get("previousClosed").toString()));
-                            symbol.setLastTradePrice(Double.parseDouble(symbolObj.get("lastTradePrice").toString()));
-                            int pendingSettle = 0;
-                            if (symbolObj.containsKey("pendingSettle")) {
-                                pendingSettle = Math.round(Float.parseFloat(symbolObj.get("pendingSettle").toString()));
-                            }
-                            // remove pending settle from available qty, implemented to cater T+2
-                            symbol.setAvailableQty(Math.round(Float.parseFloat(symbolObj.get("availableQty")
-                                                                                        .toString())) - pendingSettle);
-                            symbol.setMarketValue(symbol.getAvailableQty() * (symbol.getLastTradePrice() > 0
-                                                                              ? symbol.getLastTradePrice()
-                                                                              : symbol.getPreviousClosed()));
-
-                            /*---setting weather symbol is allowed for collateral---*/
-                            if (symbolMap.containsKey(symbol.getExchange() + "|" + symbol.getSymbolCode())) {
-                                symbol.setAllowedForCollateral(symbolMap.get(symbol.getExchange()
-                                                                             + "|"
-                                                                             + symbol.getSymbolCode())
-                                                                        .getAllowedForCollateral());
-                            }
-                            LiquidityType attachedToSymbolLiq = helper.existingSymbolLiqudityType(symbolCode, exchange);
-
-                            /*---set Default liqudit Type---*/
-                            symbol.setLiquidityType(attachedToSymbolLiq);
-
-                            /*---override if Applicaiton level Marginability group is attached with relevent
-                            Liquidity Type---*/
-                            if (attachedLiqGoupList != null) {
-                                for (LiquidityType liq : attachedLiqGoupList) {
-                                    if (liq.getLiquidId() == attachedToSymbolLiq.getLiquidId()) {
-                                        symbol.setLiquidityType(liq);
-                                    }
-                                }
-                            }
-
-                            // getting assigned group's marginability type for symbol
-                            double marginabilityPerc = helper.getSymbolMarginabilityPerc(symbolCode, exchange, id);
-                            symbol.setMarginabilityPercentage(marginabilityPerc);
+                var pfForCollateral = fromDBApp.isRollOverApp()
+                                      ? helper.getLsfTypeTradingAccounts(customerId, fromDBApp.getRollOverAppId(), fromDBApp.getMarginabilityGroup())
+                                      : helper.getPFDetailsNonLSF(customerId, fromDBApp.getMarginabilityGroup());
+                if (!pfForCollateral.isEmpty()) {
+                    var tradingAccFromAoms = pfForCollateral.getFirst();
+                    TradingAcc tradingAcc =  collaterals.isTradingAccountExist(tradingAccFromAoms.getAccountId());
+                    tradingAcc.mapFromOmsResponse(tradingAccFromAoms);
+                    tradingAcc.setApplicationId(id);
+                    tradingAccFromAoms.getSymbolList().forEach(symbol -> {
+                        Symbol symbolExt = tradingAcc.isSymbolExist(symbol.getSymbolCode(), symbol.getExchange());
+                        symbolExt.mapFromOms(symbol);
+                        double marginabilityPerc = helper.getSymbolMarginabilityPerc(symbol.getSymbolCode(), symbol.getExchange(), id);
+                        symbolExt.setMarginabilityPercentage(marginabilityPerc);
+                        if (symbolMap.containsKey(symbol.getExchange() + "|" + symbol.getSymbolCode())) {
+                            symbolExt.setAllowedForCollateral(symbolMap.get(symbol.getExchange()
+                                                                         + "|"
+                                                                         + symbol.getSymbolCode())
+                                                                    .getAllowedForCollateral());
                         }
-                    }
+                    });
+                }
+
+//                CommonInqueryMessage req = new CommonInqueryMessage();
+//                if (GlobalParameters.getInstance().getShariaSymbolsAsCollateral()) {
+//                    req.setReqType(LsfConstants.GET_PF_SYMBOLS_FOR_COLLETRALS);
+//                } else {
+//                    req.setReqType(LsfConstants.GET_NON_SHARIA_PF_SYMBOLS_FOR_COLLETRALS);
+//                }
+//                req.setCustomerId(customerId);
+//
+//                /*---request customer  PF Symbols for Colleterals---*/
+//                Object result = helper.sendMessageToOms(gson.toJson(req));
+//                Map<String, Object> resultMap = new HashMap<>();
+//                resultMap = gson.fromJson((String) result, resultMap.getClass());
+//                ArrayList<Map<String, Object>> accList = (ArrayList<Map<String, Object>>) resultMap.get(
+//                        "responseObject");
+//                for (Map<String, Object> resMap : accList) {
+//                    Map<String, Object> mpTRadingAcc = (Map<String, Object>) resMap.get("tradingAccount");
+//                    String tradingAccId = mpTRadingAcc.get("accountId").toString();
+//                    String exchange = mpTRadingAcc.get("exchange").toString();
+//
+//                    /*---Display only Application Selected Trading Account as Collateral---*/
+//                    if (resMap.containsKey("shariaSymbols")
+//                        && (tradingAccId.equalsIgnoreCase(fromDBApp.getTradingAcc()))) {
+//                        TradingAcc tradingAcc = collaterals.isTradingAccountExist(tradingAccId);
+//                        tradingAcc.setExchange(exchange);
+//                        tradingAcc.setApplicationId(id);
+//                        tradingAcc.setLsfType(false);
+//                        ArrayList<Map<String, Object>> symbolsList = (ArrayList<Map<String, Object>>) resMap.get(
+//                                "shariaSymbols");
+//
+//                        for (Map<String, Object> symbolObj : symbolsList) {
+//                            String symbolCode = symbolObj.get("symbolCode").toString();
+//                            String sExchange = symbolObj.get("exchange").toString();
+//                            Symbol symbol = tradingAcc.isSymbolExist(symbolCode, sExchange);
+//                            if (symbolObj.containsKey("shortDescription")) {
+//                                symbol.setShortDescription(symbolObj.get("shortDescription").toString());
+//                            }
+//                            symbol.setPreviousClosed(Double.parseDouble(symbolObj.get("previousClosed").toString()));
+//                            symbol.setLastTradePrice(Double.parseDouble(symbolObj.get("lastTradePrice").toString()));
+//                            int pendingSettle = 0;
+//                            if (symbolObj.containsKey("pendingSettle")) {
+//                                pendingSettle = Math.round(Float.parseFloat(symbolObj.get("pendingSettle").toString()));
+//                            }
+//                            // remove pending settle from available qty, implemented to cater T+2
+//                            symbol.setAvailableQty(Math.round(Float.parseFloat(symbolObj.get("availableQty")
+//                                                                                        .toString())) - pendingSettle);
+//                            symbol.setMarketValue(symbol.getAvailableQty() * (symbol.getLastTradePrice() > 0
+//                                                                              ? symbol.getLastTradePrice()
+//                                                                              : symbol.getPreviousClosed()));
+//
+//                            /*---setting weather symbol is allowed for collateral---*/
+//                            if (symbolMap.containsKey(symbol.getExchange() + "|" + symbol.getSymbolCode())) {
+//                                symbol.setAllowedForCollateral(symbolMap.get(symbol.getExchange()
+//                                                                             + "|"
+//                                                                             + symbol.getSymbolCode())
+//                                                                        .getAllowedForCollateral());
+//                            }
+//                            LiquidityType attachedToSymbolLiq = helper.existingSymbolLiqudityType(symbolCode, exchange);
+//
+//                            /*---set Default liqudit Type---*/
+//                            symbol.setLiquidityType(attachedToSymbolLiq);
+//
+//                            /*---override if Applicaiton level Marginability group is attached with relevent
+//                            Liquidity Type---*/
+//                            if (attachedLiqGoupList != null) {
+//                                for (LiquidityType liq : attachedLiqGoupList) {
+//                                    if (liq.getLiquidId() == attachedToSymbolLiq.getLiquidId()) {
+//                                        symbol.setLiquidityType(liq);
+//                                    }
+//                                }
+//                            }
+//
+//                            // getting assigned group's marginability type for symbol
+//                            double marginabilityPerc = helper.getSymbolMarginabilityPerc(symbolCode, exchange, id);
+//                            symbol.setMarginabilityPercentage(marginabilityPerc);
+//                        }
+//                    }
+//                }
+
+                var cashAccForCollateral = fromDBApp.isRollOverApp()
+                                           ? helper.getLsfTypeCashAccounts(customerId, fromDBApp.getRollOverAppId())
+                                           : helper.getNonLsfTypeCashAccounts(customerId);
+                if (!cashAccForCollateral.isEmpty()) {
+                    CashAcc accForCollateral = cashAccForCollateral.getFirst();
+                    CashAcc cashAcc = collaterals.isCashAccExist(accForCollateral);
+                    cashAcc.setCashBalance(accForCollateral.getCashBalance() - accForCollateral.getNetReceivable());
+                    cashAcc.setInvestmentAccountNumber(accForCollateral.getInvestmentAccountNumber());
+                    cashAcc.setApplicationId(id);
+                    cashAcc.setLsfType(accForCollateral.isLsfType());
                 }
 
                 /*---requesting for Cash balance for Colleterals---*/
-                result = "";
-                req.setReqType(LsfConstants.GET_NON_LSF_CASH_ACCOUNT_DETAILS);
-                result = helper.sendMessageToOms(gson.toJson(req));
-                resultMap.clear();
-                resultMap = gson.fromJson((String) result, resultMap.getClass());
-                ArrayList<Map<String, Object>> cashAccList = (ArrayList<Map<String, Object>>) resultMap.get(
-                        "responseObject");
-                for (Map<String, Object> cashAcc : cashAccList) {
-                    String cashAccId = cashAcc.get("accountNo").toString();
-
-                    /*--display only the application related Cash Account for Collateral---*/
-                    if (cashAccId.equalsIgnoreCase(fromDBApp.getDibAcc())) {
-                        String investmentAccNo = cashAcc.get("investorAccountNo").toString();
-                        double pendingSettle = Double.parseDouble(cashAcc.get("pendingSettle").toString());
-                        CashAcc cashAcc1 = collaterals.isCashAccExist(cashAccId);
-                        // remove pending settle from the cash balance for collateral for T+2 implementation
-                        double netReceivable = 0;
-                        if (cashAcc.containsKey("netReceivable")) {
-                            netReceivable = Double.parseDouble(cashAcc.get("netReceivable").toString());
-                            if (netReceivable < 0) {
-                                netReceivable = 0;
-                            }
-                        }
-                        cashAcc1.setCashBalance(Double.parseDouble(cashAcc.get("balance").toString()) - netReceivable);
-                        cashAcc1.setInvestmentAccountNumber(investmentAccNo);
-                        cashAcc1.setApplicationId(id);
-                        cashAcc1.setLsfType(false);
-                    }
-                }
+//                result = "";
+//                req.setReqType(LsfConstants.GET_NON_LSF_CASH_ACCOUNT_DETAILS);
+//                result = helper.sendMessageToOms(gson.toJson(req));
+//                resultMap.clear();
+//                resultMap = gson.fromJson((String) result, resultMap.getClass());
+//                ArrayList<Map<String, Object>> cashAccList = (ArrayList<Map<String, Object>>) resultMap.get(
+//                        "responseObject");
+//                for (Map<String, Object> cashAcc : cashAccList) {
+//                    String cashAccId = cashAcc.get("accountNo").toString();
+//
+//                    /*--display only the application related Cash Account for Collateral---*/
+//                    if (cashAccId.equalsIgnoreCase(fromDBApp.getDibAcc())) {
+//                        String investmentAccNo = cashAcc.get("investorAccountNo").toString();
+//                        double pendingSettle = Double.parseDouble(cashAcc.get("pendingSettle").toString());
+//                        CashAcc cashAcc1 = collaterals.isCashAccExist(cashAccId);
+//                        // remove pending settle from the cash balance for collateral for T+2 implementation
+//                        double netReceivable = 0;
+//                        if (cashAcc.containsKey("netReceivable")) {
+//                            netReceivable = Double.parseDouble(cashAcc.get("netReceivable").toString());
+//                            if (netReceivable < 0) {
+//                                netReceivable = 0;
+//                            }
+//                        }
+//                        cashAcc1.setCashBalance(Double.parseDouble(cashAcc.get("balance").toString()) - netReceivable);
+//                        cashAcc1.setInvestmentAccountNumber(investmentAccNo);
+//                        cashAcc1.setApplicationId(id);
+//                        cashAcc1.setLsfType(false);
+//                    }
+//                }
 
                 collaterals.setReadyForColleteralTransfer(true);
-                List<PurchaseOrder> purchaseOrderList = lsfRepository.getPurchaseOrderForApplication(fromDBApp.getId());
+                //List<PurchaseOrder> purchaseOrderList = lsfRepository.getPurchaseOrderForApplication(fromDBApp.getId());
                 
                 if (fromDBApp.getFinanceMethod().equals("1")) {
-                    double adminFee = GlobalParameters.getInstance().getShareAdminFee();
-                    if (purchaseOrderList != null && purchaseOrderList.size() > 0) {
-                        PurchaseOrder purchaseOrder = purchaseOrderList.get(0);
-                        if (purchaseOrder.getSimaCharges() > 0 || purchaseOrder.getTransferCharges() > 0) {
-                            adminFee = purchaseOrder.getSimaCharges() + purchaseOrder.getTransferCharges();
-                        }
-                    }
-                    collaterals.setAdminFee(adminFee);
+                    //double adminFee = GlobalParameters.getInstance().getShareAdminFee();
+//                    if (purchaseOrderList != null && purchaseOrderList.size() > 0) {
+//                        PurchaseOrder purchaseOrder = purchaseOrderList.get(0);
+//                        if (purchaseOrder.getSimaCharges() > 0 || purchaseOrder.getTransferCharges() > 0) {
+//                            adminFee = purchaseOrder.getSimaCharges() + purchaseOrder.getTransferCharges();
+//                        }
+//                    }
+                    collaterals.setAdminFee(GlobalParameters.getInstance().getShareAdminFee());
                 } else {
                     collaterals.setAdminFee(GlobalParameters.getInstance().getComodityAdminFee());
+                    if (fromDBApp.isRollOverApp()) {
+                        final MApplicationCollaterals finalCollaterals = collaterals;
+                        collaterals.getCashAccForColleterals().forEach(cashAcc -> {
+                            cashAcc.setAmountAsColletarals(cashAcc.getCashBalance() - finalCollaterals.getAdminFee());
+                        });
+                    }
                 }
                 
                 double vatAmount = LSFUtils.ceilTwoDecimals(lsfCore.calculateVatAmt(collaterals.getAdminFee()));
@@ -273,17 +308,14 @@ public class ApplicationCollateralProcessor implements MessageProcessor {
         MApplicationCollaterals collaterals = gson.fromJson(jsonString, MApplicationCollaterals.class);
         MurabahApplication application = lsfRepository.getMurabahApplication(collaterals.getApplicationId());
 
-        if (collaterals.getCashAccForColleterals() != null && collaterals.getCashAccForColleterals().size() > 0) {
+        if (collaterals.getCashAccForColleterals() != null && !collaterals.getCashAccForColleterals().isEmpty()) {
             for (CashAcc cashAcc : collaterals.getCashAccForColleterals()) {
-                if (cashAcc.getAccountId().equalsIgnoreCase(application.getCashAccount())) {
-                    accountBalance = cashAcc.getCashBalance();
-                    cashCollateralAmount = cashAcc.getAmountAsColletarals();
-                }
+                accountBalance = cashAcc.getCashBalance();
+                cashCollateralAmount = cashAcc.getAmountAsColletarals();
             }
         }
 
-        double adminFee = GlobalParameters.getInstance().getSimaCharges() + GlobalParameters.getInstance()
-                                                                                            .getTransferCharges();
+        double adminFee = application.getFinanceMethod().equals("1") ? GlobalParameters.getInstance().getShareAdminFee() : GlobalParameters.getInstance().getComodityAdminFee();
         double vatAmount = lsfCore.calculateVatAmt(adminFee);
         logger.debug("====LSF : adminFee :"
                      + adminFee
@@ -291,14 +323,10 @@ public class ApplicationCollateralProcessor implements MessageProcessor {
                      + vatAmount
                      + " , account Balance :"
                      + accountBalance);
-        if (accountBalance >= (adminFee + vatAmount + cashCollateralAmount)) { /*--if vailable cash balance <
-        (collatral value + adminFee)
-                                stop collateral submission--*/
+        if (accountBalance >= (adminFee + vatAmount + cashCollateralAmount)) {
             logger.debug("====LSF: Is Market Open :" + LSFUtils.isMarketOpened());
-            if (LSFUtils.isMarketOpened()) { /*---if market is closed stop placing collaterals---*/
-
-                if (collaterals != null
-                    && application.getCurrentLevel() != GlobalParameters.getInstance()
+            if (LSFUtils.isMarketOpened()) {
+                if (application.getCurrentLevel() != GlobalParameters.getInstance()
                                                                         .getGetAppCloseLevel()
                     && Integer.parseInt(application.getOverallStatus()) > 0) {
 
@@ -314,9 +342,9 @@ public class ApplicationCollateralProcessor implements MessageProcessor {
 
                             logger.debug("===========LSF : Updating Collaterals");
                             if (collaterals.getLsfTypeTradingAccounts() != null
-                                && collaterals.getLsfTypeCashAccounts().size() > 0) {
+                                && !collaterals.getLsfTypeCashAccounts().isEmpty()) {
                                 logger.debug("===========LSF : Updating Cash Account :");
-                                CashAcc lsfCashAccount = collaterals.getLsfTypeCashAccounts().get(0);
+                                CashAcc lsfCashAccount = collaterals.getLsfTypeCashAccounts().getFirst();
                                 CashAcc updatedLsfCashAccount = lsfCore.getLsfTypeCashAccountForUser(
                                         application.getCustomerId(),
                                         application.getId());
@@ -325,9 +353,9 @@ public class ApplicationCollateralProcessor implements MessageProcessor {
                                              + updatedLsfCashAccount.getAccountId());
                             }
                             if (collaterals.getLsfTypeTradingAccounts() != null
-                                && collaterals.getLsfTypeTradingAccounts().size() > 0) {
+                                && !collaterals.getLsfTypeTradingAccounts().isEmpty()) {
                                 logger.debug("===========LSF : Updating Trading Account :");
-                                TradingAcc lsfTradingAccount = collaterals.getLsfTypeTradingAccounts().get(0);
+                                TradingAcc lsfTradingAccount = collaterals.getLsfTypeTradingAccounts().getFirst();
                                 TradingAcc updatedLsfTradingAccount = lsfCore.getLsfTypeTradinAccountForUser(
                                         application.getCustomerId(),
                                         application.getId());
@@ -417,22 +445,11 @@ public class ApplicationCollateralProcessor implements MessageProcessor {
             }
         } else {
             cmr.setResponseCode(500);
-            //    cmr.setResponseMessage("Cash Collatral + AdminFee must be less than or equal to the available cash
-            //    balance");
-            //     cmr.setErrorMessage("Cash Collatral + AdminFee must be less than or equal to the available cash
-            //     balance");
-
-            //cmr.setResponseMessage("Cash Collateral Amount Should be less than or equal to :" + (accountBalance -
-            // (adminFee + vatAmount)));
-            cmr.setResponseMessage("Cash Collateral Amount Should be less than or equal to :" + (adminFee + vatAmount));
-            // cmr.setErrorMessage("Cash Collateral Amount Should be less than or equal to :" + (accountBalance -
-            // (adminFee + vatAmount)));
+            cmr.setResponseMessage("Cash Collateral Amount Should be less than or equal to :" + (accountBalance - (adminFee
+                                                                                                                   + vatAmount)));
             cmr.setErrorMessage("Cash Collateral Amount Should be less than or equal to :" + (accountBalance - (adminFee
                                                                                                                 + vatAmount)));
-            List<String> parameters = new ArrayList<>();
-            parameters.add(String.valueOf(adminFee + vatAmount));
             cmr.setErrorCode(LsfConstants.ERROR_CASH_AMOUNT_VALIDATION_FAILED);
-            cmr.setParameterList(parameters);
         }
         return gson.toJson(cmr);
     }
